Implementación gestión empleados

--- a/Shamrock-app/src/index.css
+++ b/Shamrock-app/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(20, 20, 20, 0.87);
   background-color: #242424;
 
   font-synthesis: none;
@@ -57,7 +57,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #0c0c0c;
   }
   a:hover {
     color: #747bff;
@@ -65,4 +65,18 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+.login-box input {
+  color: #000; /* texto visible */
+  background-color: #fff; /* fondo visible */
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  width: 100%;
+  margin-bottom: 10px;
+  font-size: 16px;
+}
+
+.login-box input::placeholder {
+  color: #888;
 }
