--- a/Shamrock-app/src/index.css
+++ b/Shamrock-app/src/index.css
@@ -14,12 +14,12 @@
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
+  font-weight: 600;
+  color: #f5f5f8;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #f3f3f3;
 }
 
 body {
